--- a/Areas/Admin/Views/HomeAdmin/ThemTruyen.cshtml
+++ b/Areas/Admin/Views/HomeAdmin/ThemTruyen.cshtml
@@ -29,6 +29,11 @@
                 <span asp-validation-for="BiDanh" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label class="control-label">Tên tác giả</label>
+                <input id="tac-gia" class="form-control" />
+                <span class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="NoiDung" class="control-label">Nội dung</label>
                 <input asp-for="NoiDung" class="form-control" />
                 <span asp-validation-for="NoiDung" class="text-danger"></span>
@@ -69,7 +74,7 @@
                 <span asp-validation-for="NgayDang" class="text-danger"></span>
             </div>*@
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input id="click" type="submit" value="Create" class="btn btn-primary" onclick="addTacGia();"/>
             </div>
         </form>
     </div>
@@ -79,3 +84,17 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
+<script type="text/javascript">
+    function addTacGia() {
+        $.ajax({
+            type: 'POST',
+            url: 'https://localhost:7042/api/search/addtacgia?ten=' + $("#tac-gia").val(),
+            contentType: 'json',
+            dataType: 'json',
+            success: function (response) {
+            },
+            error: function (response) {
+            }
+        });
+    }
+</script>
