--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,10 +7,13 @@
 @model X.PagedList.IPagedList<Truyen>
 @foreach (var item in Model)
 {
-	@await Html.PartialAsync("PartialTruyen", item);
+	@await Html.PartialAsync("PartialTruyen", item)
+	;
 }
+<div class="col-lg-12">
 @Html.PagedListPager(Model, page=>Url.Action("Index", new {page=page}), new
 X.PagedList.Web.Common.PagedListRenderOptions(){
     LiElementClasses=new List<String> {"page-item"},
     PageClasses=new List<String> {"page-link"}
 })
+</div>
