--- a/Views/Home/IndexLogged.cshtml
+++ b/Views/Home/IndexLogged.cshtml
@@ -9,8 +9,10 @@
 {
 	@await Html.PartialAsync("PartialTruyen", item);
 }
+<div class="col-lg-12">
 @Html.PagedListPager(Model, page=>Url.Action("Index", new {page=page}), new
 X.PagedList.Web.Common.PagedListRenderOptions(){
     LiElementClasses=new List<String> {"page-item"},
     PageClasses=new List<String> {"page-link"}
 })
+</div>
