--- a/Views/Home/ChiTietTruyen.cshtml
+++ b/Views/Home/ChiTietTruyen.cshtml
@@ -39,10 +39,10 @@
 			<div class="theo-doi">
 				<a class="btn btn-success rounded" asp-controller="Access" asp-action="Login">Theo dõi</a>
 			</div>
-			@*<div class="theo-doi">
+			<div class="theo-doi">
 				<a class="btn btn-warning rounded" asp-controller="Home" asp-action="ChiTietChuong" asp-route-idChuong="@Model.myChuong.OrderBy(x=>x.Id).FirstOrDefault().Id">Đọc từ đầu</a>
 				<a class="btn btn-warning rounded" asp-controller="Home" asp-action="ChiTietChuong" asp-route-idChuong="@Model.myChuong.OrderByDescending(x=>x.Id).FirstOrDefault().Id">Đọc mới nhất</a>
-			</div>*@
+			</div>
 		</div>
 		<div style="padding-left:35px">
 			<dd class="col-sm-12">
