--- a/Views/Shared/_LayoutChiTietTruyen.cshtml
+++ b/Views/Shared/_LayoutChiTietTruyen.cshtml
@@ -125,7 +125,7 @@
 	<!-- Navbar End -->
 	<!-- News With Sidebar Start -->
 	<div class="container-fluid">
-		<div class="container">
+		<div class="container background-white">
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="row">
@@ -144,11 +144,12 @@
 							<div class="input-group mb-2" style="width: 100%;">
 								<input type="text" class="form-control form-control-lg" placeholder="Nhập bình luận">
 								<div class="input-group-append">
-									<button class="btn btn-primary font-weight-bold px-3">Bình luận</button>
+									<button onclick="alertCmt()" class="btn btn-primary font-weight-bold px-3">Bình luận</button>
 								</div>
 							</div>
 							<div class="comment-list">
 								@*@await Html.PartialAsync("BinhLuann")*@
+								@await Component.InvokeAsync("Comments", new{id=ViewBag.id})
 							</div>
 						</div>
 					</div>
@@ -337,5 +338,9 @@
 				$("#result").html("");
 			}
 		});
+	}
+
+	function alertCmt(){
+		alert("Bạn cần đăng nhập để có thể bình luận");
 	}
 </script>l>
